--- a/public/css/chatView.scss
+++ b/public/css/chatView.scss
@@ -3,7 +3,9 @@
   flex-direction: column;
   width: 100%;
   background-color: #161616;
-  padding: 5px 5px 10px 0;
+  padding: 5px 5px 10px 75px;
+  position: relative;
+  z-index: 1;
 }
 .body__left-container {
   display: flex;
@@ -250,4 +252,135 @@
   right: 15px;
   transform: translate(-50%, -50%) scale(1.4) rotate(360deg);
   color: red;
+}
+.friend__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  width: 100%;
+  position: relative;
+  &-header {
+    padding: 10px;
+    display: flex;
+    font-size: 15px;
+    align-items: center;
+    transition: all;
+    border-radius: 10px;
+    width: 100%;
+    transition: all 0.3s ease;  
+    margin-bottom: 5px;
+    position: relative;
+    &:hover {
+      color: #fff;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7),
+      -2px -2px 5px rgba(90, 90, 90, 0.15);
+    }
+    & > ion-icon {
+      font-size: 30px;
+    }
+  }
+  &-container {
+    margin-top: 50px;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    padding: 0 !important;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    overflow-y: scroll;
+    transition: all 0.25s ease;
+    box-shadow:inset 2px 2px 5px rgb(0 0 0 / 30%), inset -2px -2px 5px #414e623a;
+    position: relative;
+    &::-webkit-scrollbar {
+      background-color: transparent;
+      width: 0px;
+    }
+    &>li {
+      width: 100%;
+    }
+  }
+  &-search {  
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    width: 140px;
+    transition: all 0.3s ease;
+    opacity: 0;
+    // &> ion-icon {
+    //   position: absolute;
+    //   top: 50%;
+    //   right: 10px;
+    //   transform: translate(0, -50%);
+    //   transition: all 0.15s ease;
+    // }
+    &>input {
+      transition: all 0.15s ease;
+      width: 100%;
+      background-color: inherit;
+      padding: 10px;
+      border-radius: inherit;
+      color: #808385;
+      background: #18191A;
+      font-size: 12px;
+      transition: all 0.2s ease;
+      &:focus {
+        outline: none;
+        background: #1e1e1f;
+        color: rgba(255, 255, 255, 0.932);
+        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7),
+        -1px -1px 4px rgba(90, 90, 90, 0.15);
+      }
+      
+    }
+    &:hover {
+      color: #fff;
+      box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7),
+      -1px -1px 4px rgba(90, 90, 90, 0.15);
+      // box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7),
+      //  -2px -2px 5px rgba(90, 90, 90, 0.15);
+    }
+  }
+  &-item {
+    margin: 0 auto;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    transition: all 0.2s ease;  
+    position: relative;
+    width: 90%;
+    &-image {
+      width: 30px;
+      height:  30px;
+      border-radius: 50%;
+    }
+    &-text {
+      font-size: 10px;
+      margin-left: 5px;
+    }
+    &-icon {
+      position: absolute;
+      top: 50%;
+      right: 5px;
+      transform: translate(-50%, -50%) rotate(45deg) scale(1.5);
+    }
+    &:hover {
+      // background-color: #262626;
+      // color: #fff;
+      // box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7),
+      //  -2px -2px 5px rgba(90, 90, 90, 0.15);
+    }
+
+  }
+}
+.height-0 {
+  height: 0;
+  margin-top: 0;
+  opacity: 0;
+}
+img {
+  height: 100%;
 }
