--- a/public/css/loginView.css
+++ b/public/css/loginView.css
@@ -106,7 +106,7 @@
 }
 
 .image-1 {
-  background: url(../images/uiPreView.png) padding-box, linear-gradient(45deg, #9B3D95, #B7356B, #EF2E36, #FC8B4B) border-box;
+  background: url(../image/uiPreView.png) padding-box, linear-gradient(45deg, #9B3D95, #B7356B, #EF2E36, #FC8B4B) border-box;
   position: absolute;
   background-size: cover;
   width: 250px;
@@ -118,7 +118,7 @@
 }
 
 .image-2 {
-  background: url(../images/1.png) padding-box, linear-gradient(45deg, #9B3D95, #B7356B, #EF2E36, #FC8B4B) border-box;
+  background: url(../image/1.png) padding-box, linear-gradient(45deg, #9B3D95, #B7356B, #EF2E36, #FC8B4B) border-box;
   position: absolute;
   background-size: cover;
   width: 150px;
@@ -131,7 +131,7 @@
 }
 
 .image-3 {
-  background: url(../images/3.png) padding-box, linear-gradient(45deg, #9B3D95, #B7356B, #EF2E36, #FC8B4B) border-box;
+  background: url(../image/3.png) padding-box, linear-gradient(45deg, #9B3D95, #B7356B, #EF2E36, #FC8B4B) border-box;
   position: absolute;
   background-size: cover;
   width: 150px;
@@ -143,7 +143,7 @@
 }
 
 .image-4 {
-  background: url(../images/2.png) padding-box, linear-gradient(45deg, #9B3D95, #B7356B, #EF2E36, #FC8B4B) border-box;
+  background: url(../image/2.png) padding-box, linear-gradient(45deg, #9B3D95, #B7356B, #EF2E36, #FC8B4B) border-box;
   position: absolute;
   background-size: cover;
   width: 200px;
