--- a/public/css/menu-left.scss
+++ b/public/css/menu-left.scss
@@ -11,18 +11,22 @@ body {
   display: flex;
 }
 .menu {
+  z-index: 20;
   top: 0;
   left: 0;
   width: 200px;
   padding: 10px;
   height: 100%;
-  background: #202020;
+  background: #161616;
   margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding-top: 40px;
   transition: all 0.5s ease;
+  position: fixed;
+  top: 0;
+  right: 0;
   &-header {
     display: flex;
     justify-content: flex-end;
@@ -49,6 +53,7 @@ body {
     align-items: center;
     transition: all;
     border-radius: 10px;
+    transition: all 0.3s ease;
     & > ion-icon {
       font-size: 30px;
     }
@@ -63,8 +68,10 @@ body {
       0.2s ease-out;
     }
     &:hover {
-      background-color: #262626;
+      // background-color: #262626;
       color: #fff;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7),
+       -2px -2px 5px rgba(90, 90, 90, 0.15);
     }
   }
   &-search {
@@ -73,6 +80,7 @@ body {
     background-color: #3A3B3C;
     position: relative;
     border-radius: 10px;
+    display: inline-block;
     &-icon {
       position: absolute;
       top: 50%;
@@ -113,4 +121,166 @@ body {
 }
 ul{
   padding-top: 10px !important;
+}
+.friend__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  width: 100%;
+  position: relative;
+  &-header {
+    padding: 10px;
+    display: flex;
+    font-size: 15px;
+    align-items: center;
+    transition: all;
+    border-radius: 10px;
+    width: 100%;
+    transition: all 0.3s ease;  
+    margin-bottom: 5px;
+    position: relative;
+    &:hover {
+      color: #fff;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7),
+      -2px -2px 5px rgba(90, 90, 90, 0.15);
+    }
+    & > ion-icon {
+      font-size: 30px;
+    }
+  }
+  &-container {
+    margin-top: 50px;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    padding: 0 !important;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    overflow-y: scroll;
+    transition: all 0.25s ease;
+    box-shadow:inset 2px 2px 5px rgb(0 0 0 / 30%), inset -2px -2px 5px #414e623a;
+    position: relative;
+    &::-webkit-scrollbar {
+      background-color: transparent;
+      width: 0px;
+    }
+    &>li {
+      width: 100%;
+    }
+  }
+  &-search {  
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    width: 140px;
+    transition: all 0.3s ease;
+    opacity: 0;
+    // &> ion-icon {
+    //   position: absolute;
+    //   top: 50%;
+    //   right: 10px;
+    //   transform: translate(0, -50%);
+    //   transition: all 0.15s ease;
+    // }
+    &>input {
+      transition: all 0.15s ease;
+      width: 100%;
+      background-color: inherit;
+      padding: 10px;
+      border-radius: inherit;
+      color: #808385;
+      background: #18191A;
+      font-size: 12px;
+      transition: all 0.2s ease;
+      &:focus {
+        outline: none;
+        background: #1e1e1f;
+        color: rgba(255, 255, 255, 0.932);
+        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7),
+        -1px -1px 4px rgba(90, 90, 90, 0.15);
+      }
+      
+    }
+    &:hover {
+      color: #fff;
+      box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.7),
+      -1px -1px 4px rgba(90, 90, 90, 0.15);
+      // box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7),
+      //  -2px -2px 5px rgba(90, 90, 90, 0.15);
+    }
+  }
+  &-item {
+    margin: 0 auto;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    transition: all 0.2s ease;  
+    position: relative;
+    width: 90%;
+    &-image {
+      width: 30px;
+      height:  30px;
+      border-radius: 50%;
+    }
+    &-text {
+      font-size: 10px;
+      margin-left: 5px;
+    }
+    &-icon {
+      position: absolute;
+      top: 50%;
+      right: 5px;
+      transform: translate(-50%, -50%) rotate(45deg) scale(1.5);
+    }
+    &:hover {
+      // background-color: #262626;
+      // color: #fff;
+      // box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7),  
+      //  -2px -2px 5px rgba(90, 90, 90, 0.15);
+    }
+
+  }
+}
+.height-0 {
+  height: 0;
+  margin-top: 0;
+  opacity: 0;
+}
+img {
+  height: 100%;
+}
+.filter-container {
+  background: #121212;
+  position: fixed;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  // box-shadow: inset 10px 10px 15px rgba(0, 0, 0,),
+  // inset -10px -10px 15px rgba(255, 255, 255, 0.05);
+  opacity: 0;
+  display: none;
+}
+@keyframes filter-on {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.8;
+  }
+}
+@keyframes filter-off {
+  0% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0;
+  }
 }
