--- a/public/css/chatView.css
+++ b/public/css/chatView.css
@@ -29,6 +29,7 @@
     border: 4px solid rgba(61, 37, 37, 0.05);
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5), -8px -12px 5px #414e623a;
     transition: all 0.2s ease;
+    object-fit: cover;
 }
 
 .body__left-user-image:hover {
@@ -113,6 +114,7 @@
     border: 2px solid rgba(61, 37, 37, 0.05);
     margin-right: 10px;
     transition: all 0.2s ease;
+    object-fit: cover;
 }
 
 .body__left-item-name {
@@ -145,6 +147,7 @@
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1), -2px -2px 5px #414e623a;
     border: 2px solid rgba(61, 37, 37, 0.05);
     transition: all 0.5s ease;
+    object-fit: cover;
 }
 
 .body__chatBox-header-name {
@@ -166,14 +169,13 @@
 }
 
 .body__chatBox-msgArea {
-    padding: 320px 10px 10px 10px;
+    padding: 20px 10px 10px 10px;
     margin: 5px;
     border-radius: inherit;
     box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.5), inset -2px -2px 5px #414e625e;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
     overflow-y: scroll;
     height: 100%;
     color: inherit;
