--- a/public/css/home.css
+++ b/public/css/home.css
@@ -218,6 +218,7 @@ body {
     height: 40px;
     border-radius: 30% 70% 65% 35%/30% 32% 68% 70%;
     box-shadow: 2px 2px 5px black, -2px -2px 5px #3c495c6b;
+    object-fit: cover;
 }
 
 .post__header-time {
@@ -717,11 +718,13 @@ body {
     width: 85px;
     cursor: pointer;
     transition: all 0.2s ease;
+    object-fit: cover;
 }
 
 .btn-mess>ion-icon {
     margin-right: 5px;
     transform: translateY(2px);
+    object-fit: cover;
 }
 
 .btn-mess:hover {
