--- a/public/css/menu-left.css
+++ b/public/css/menu-left.css
@@ -319,7 +319,7 @@ img {
 }
 
 .icon-information>ion-icon::before {
-    content: "15";
+    content: "";
     position: absolute;
     font-size: 10px;
     padding: 2px 4px;
