--- a/public/css/menu-left.css
+++ b/public/css/menu-left.css
@@ -318,19 +318,6 @@ img {
     }
 }
 
-.icon-information>ion-icon::before {
-    content: "";
-    position: absolute;
-    font-size: 10px;
-    padding: 2px 4px;
-    border-radius: 100px;
-    background-color: red;
-    color: #fff;
-    font-weight: 600;
-    right: 0;
-    transform: scale(0.9) translateX(1px);
-}
-
 .notiList {
     position: absolute;
     top: 50%;
@@ -429,6 +416,24 @@ img {
 .btn-Fr>p {
     color: rgba(255, 255, 255, 0.7);
     font-weight: 500;
+}
+
+.icon-count {
+    content: "15";
+    position: absolute;
+    font-size: 10px;
+    padding: 2px 4px;
+    border-radius: 100px;
+    background-color: red;
+    color: #fff;
+    font-weight: 600;
+    left: 25px;
+    top: 9px;
+    transform: scale(0.9);
+    min-width: 15px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 10px;
 }
 
 
